--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -9,12 +9,29 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+  <style>
+    button:focus{
+      outline: none;
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
     <div class="screen">
       <div class="screen__content">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+              {% for category, message in messages %}
+                  <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                      <span>{{ message }}</span>
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">×</span>
+                      </button>
+                  </div>
+              {% endfor %}
+          {% endif %}
+      {% endwith %}
         <form class="login" method="POST" action="{{ url_for('home_bp.logins') }}">
           <div class="login__field">
             <i class="login__icon fas fa-user"></i>
@@ -38,6 +55,11 @@
       </div>
     </div>
   </div>
+  <script>
+    document.getElementsByClassName('close')[0].addEventListener('click',function() {
+      document.getElementsByClassName('alert')[0].style.display = "none";
+    })
+  </script>
 </body>
 
 </html>
