--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -9,13 +9,30 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="{{ url_for('static', filename = 'css/signup.css') }}">
+  <style>
+    button:focus{
+      outline: none;
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
     <div class="screen">
       <div class="screen__content">
-        <form class="login" method="POST" action="{{ url_for('home_bp.signups') }}">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+              {% for category, message in messages %}
+                  <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                      <span>{{ message }}</span>
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">×</span>
+                      </button>
+                  </div>
+              {% endfor %}
+          {% endif %}
+      {% endwith %}
+        <form style="margin-bottom: 5rem;" class="login" method="POST" action="{{ url_for('home_bp.signups') }}">
           <div class="login__field">
             <i class="login__icon fas fa-user"></i>
             <input type="text" class="login__input" name="fname" placeholder="First Name">
@@ -48,7 +65,6 @@
             <span class="button__text">Sign Up Now</span>
             <i class="button__icon fas fa-chevron-right"></i>
           </button>
-
         </form>
       </div>
       <div class="screen__background">
@@ -59,6 +75,12 @@
       </div>
     </div>
   </div>
+
+  <script>
+    document.getElementsByClassName('close')[0].addEventListener('click',function() {
+      document.getElementsByClassName('alert')[0].style.display = "none";
+    })
+  </script>
 </body>
 
 </html>
