--- a/home/templates/UserScore.html
+++ b/home/templates/UserScore.html
@@ -5,37 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/User.css') }}">
-
-    <title>Score</title>
-    <!-- Styles -->
+    <title>Profile</title>
     <style>
       .chartdiv {
         width: 100%;
         height: 500px;
+      }
+      .profile{
+        margin-top: 80px;
       }
 
       </style>
 
 </head>
 <body>
-    <div class="container">
+  <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav white">
+		<a class="navbar-brand" href="#">Logo PhiloMath</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse " id="navbarSupportedContent">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="/logout">Logout</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+    <div class="container profile">
         <div class="main-body">
-
-              <!-- Breadcrumb -->
-              <nav aria-label="breadcrumb" class="main-breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                  <li class="breadcrumb-item"><a href="javascript:void(0)">User</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">User Profile</li>
-                </ol>
-              </nav>
-              <!-- /Breadcrumb -->
-
               <div class="row gutters-sm">
                 <div class="col-md-4 mb-3">
-                  <div class="card">
+                  <div class="card" style="height: 351px;">
                     <div class="card-body">
                       <div class="d-flex flex-column align-items-center text-center">
                         <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
