--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -27,13 +27,10 @@
 		<div class="collapse navbar-collapse " id="navbarSupportedContent">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link a1" href="#">Home</a>
+					<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link a1" href="#">About Us</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link a1" href="#">Contact</a>
+					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link a1" href="/logout">Logout</a>
