--- a/home/templates/UserScore.html
+++ b/home/templates/UserScore.html
@@ -18,6 +18,10 @@
       .profile{
         margin-top: 80px;
       }
+      .rounded-circles{
+  width: 50%;
+  /* height: 20%; */
+}
 
       </style>
 
@@ -52,7 +56,7 @@
                   <div class="card" style="height: 351px;">
                     <div class="card-body">
                       <div class="d-flex flex-column align-items-center text-center">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="10">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circles" width="10">
                         <div class="mt-3">
                           <h4 style="text-transform:capitalize;">{{context.fname}} {{context.lname}}</h4>
                           <p class="text-secondary mb-1">Grade {{context.grade}}</p>
