--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -1,86 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Signup</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename = 'css/signup.css') }}"
+    />
+    <style>
+      button:focus {
+        outline: none;
+      }
+      .container {
+        margin: 20px 0 20px 0;
+      }
+    </style>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signup</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <link rel="stylesheet" href="{{ url_for('static', filename = 'css/signup.css') }}">
-  <style>
-    button:focus{
-      outline: none;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div class="screen">
-      <div class="screen__content">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-              {% for category, message in messages %}
-                  <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                      <span>{{ message }}</span>
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">×</span>
-                      </button>
-                  </div>
-              {% endfor %}
-          {% endif %}
-      {% endwith %}
-        <form style="margin-bottom: 5rem;" class="login" method="POST" action="{{ url_for('home_bp.signups') }}">
-          <div class="login__field">
-            <i class="login__icon fas fa-user"></i>
-            <input type="text" class="login__input" name="fname" placeholder="First Name" required>
+  <body>
+    <div class="container">
+      <div class="screen">
+        <div class="screen__content">
+          {% with messages = get_flashed_messages(with_categories=true) %} {% if
+          messages %} {% for category, message in messages %}
+          <div
+            class="alert alert-{{ category }} alert-dismissible fade show"
+            role="alert"
+          >
+            <span>{{ message }}</span>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">×</span>
+            </button>
           </div>
-          <div class="login__field">
-            <i class="login__icon fas fa-user"></i>
-            <input type="text" class="login__input" name="lname" placeholder="Last Name" required>
-          </div>
-          <div class="login__field">
-            <i class="login__icon fas fa-envelope"></i>
-            <input type="email" class="login__input" name="email" placeholder="Email" required>
-          </div>
-          <div class="login__field">
-            <i class="login__icon fas fa-lock"></i>
-            <input type="password" class="login__input" name="password" placeholder="Password" required>
-          </div>
-          <div class="login__field">
-            <i class="login__icon fas fa-check-circle"></i>
-            <input type="password" class="login__input" name="cpassword" placeholder="Confirm Password" required>
-          </div>
-          <div class="login__field">
-            <i class="login__icon fas fa-birthday-cake"></i>
-            <input type="date" class="login__input" name="dob" placeholder="Birthday" required>
-          </div>
-          <div class="login__field">
-            <i class="login__icon fas fa-graduation-cap"></i>
-            <input type="text" class="login__input" name="grade" placeholder="Current Grade" required>
-          </div>
-          <button class="button login__submit">
-            <span class="button__text">Sign Up Now</span>
-            <i class="button__icon fas fa-chevron-right"></i>
-          </button>
-        </form>
-      </div>
-      <div class="screen__background">
-        <span class="screen__background__shape screen__background__shape4"></span>
-        <span class="screen__background__shape screen__background__shape3"></span>
-        <span class="screen__background__shape screen__background__shape2"></span>
-        <span class="screen__background__shape screen__background__shape1"></span>
+          {% endfor %} {% endif %} {% endwith %}
+          <form
+            style="margin-bottom: 5rem"
+            class="login"
+            method="POST"
+            action="{{ url_for('home_bp.signups') }}"
+          >
+            <div class="login__field">
+              <i class="login__icon fas fa-user"></i>
+              <input
+                type="text"
+                class="login__input"
+                name="fname"
+                placeholder="First Name"
+                required
+              />
+            </div>
+            <div class="login__field">
+              <i class="login__icon fas fa-user"></i>
+              <input
+                type="text"
+                class="login__input"
+                name="lname"
+                placeholder="Last Name"
+                required
+              />
+            </div>
+            <div class="login__field">
+              <i class="login__icon fas fa-envelope"></i>
+              <input
+                type="email"
+                class="login__input"
+                name="email"
+                placeholder="Email"
+                required
+              />
+            </div>
+            <div class="login__field">
+              <i class="login__icon fas fa-lock"></i>
+              <input
+                type="password"
+                class="login__input"
+                name="password"
+                placeholder="Password"
+                required
+              />
+            </div>
+            <div class="login__field">
+              <i class="login__icon fas fa-check-circle"></i>
+              <input
+                type="password"
+                class="login__input"
+                name="cpassword"
+                placeholder="Confirm Password"
+                required
+              />
+            </div>
+            <div class="login__field">
+              <i class="login__icon fas fa-birthday-cake"></i>
+              <input
+                type="date"
+                class="login__input"
+                name="dob"
+                placeholder="Birthday"
+                required
+              />
+            </div>
+            <div class="login__field">
+              <i class="login__icon fas fa-graduation-cap"></i>
+              <input
+                type="text"
+                class="login__input"
+                name="grade"
+                placeholder="Current Grade"
+                required
+              />
+            </div>
+            <button class="button login__submit">
+              <span class="button__text">Sign Up Now</span>
+              <i class="button__icon fas fa-chevron-right"></i>
+            </button>
+          </form>
+        </div>
+        <div class="screen__background">
+          <span
+            class="screen__background__shape screen__background__shape4"
+          ></span>
+          <span
+            class="screen__background__shape screen__background__shape3"
+          ></span>
+          <span
+            class="screen__background__shape screen__background__shape2"
+          ></span>
+          <span
+            class="screen__background__shape screen__background__shape1"
+          ></span>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script>
-    document.getElementsByClassName('close')[0].addEventListener('click',function() {
-      document.getElementsByClassName('alert')[0].style.display = "none";
-    })
-  </script>
-</body>
-
+    <script>
+      document
+        .getElementsByClassName("close")[0]
+        .addEventListener("click", function () {
+          document.getElementsByClassName("alert")[0].style.display = "none";
+        });
+    </script>
+  </body>
 </html>
