--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,12 +4,8 @@
   box-sizing: border-box;
 }
 
-
-
-
-
 .blue {
-  background-color: #0070BB;
+  background-color: #0070bb;
 }
 
 .white {
@@ -18,16 +14,18 @@
 
 #n1 {
   position: fixed;
+  background-color: white !important;
   /* height: calc(100%-200px); */
   width: 100%;
   top: 0;
   left: 0;
   z-index: 9999;
 }
-#name-div{
+#name-div {
   margin-right: 1rem;
 }
-.navbar-brand, .nav-link {
+.navbar-brand,
+.nav-link {
   color: #000 !important;
 }
 
@@ -75,17 +73,19 @@
   height: 92.5vh;
 }
 
-#leftsection, #rightsection {
+#leftsection,
+#rightsection {
   padding: 20px 10px;
 }
 
 #righttsection h3 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: black;
   font-size: 2vw;
 }
 
-#rightsection, #leftsection {
+#rightsection,
+#leftsection {
   margin: 0 auto;
   display: block;
 }
@@ -97,13 +97,13 @@
 }
 
 #algs {
-  padding:100px 10px 50px 10px;
+  padding: 100px 10px 50px 10px;
   width: 100%;
   min-height: 100vh;
-  background-color: #0070BB;
+  background-color: #0070bb;
 }
-#fracs{
-  padding:100px 10px 50px 10px;
+#fracs {
+  padding: 100px 10px 50px 10px;
   width: 100%;
   padding-bottom: 50px;
   min-height: 100vh;
@@ -111,15 +111,14 @@
 
 #board {
   width: 100%;
-  min-height:92.5vh ;
+  min-height: 92.5vh;
   margin-top: 56px;
   background-color: #31343a;
   border: 15px solid grey;
   color: #fbf7f5;
-  font-family: 'Fredericka the Great', cursive;
-  
+  font-family: "Fredericka the Great", cursive;
 }
-.signup{
+.signup {
   margin-bottom: 1rem;
 }
 
@@ -145,7 +144,7 @@
   position: absolute;
   top: 60%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 #quot {
@@ -164,83 +163,84 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
-.flex-btn{
+.flex-btn {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.board-btn{
-  color:#fbf7f5!important;
+.board-btn {
+  color: #fbf7f5 !important;
   font-size: 1.5rem;
-  border-radius:50px;
-  height:90px;
-  width:200px;
-  padding:5px;
+  border-radius: 50px;
+  height: 90px;
+  width: 200px;
+  padding: 5px;
   background-color: transparent;
-  border:1px solid #fbf7f5;
+  border: 1px solid #fbf7f5;
 }
-.frac-btn{
-  color:white!important;
+.frac-btn {
+  color: white !important;
   font-size: 1.5rem;
-  border-radius:50px;
-  height:90px;
-  width:200px;
-  padding:5px;
+  border-radius: 50px;
+  height: 90px;
+  width: 200px;
+  padding: 5px;
 }
-.alg-btn{
-  color:black!important;
+.alg-btn {
+  color: black !important;
   font-size: 1.5rem;
-  border-radius:50px;
-  height:90px;
-  width:200px;
-  padding:5px;
+  border-radius: 50px;
+  height: 90px;
+  width: 200px;
+  padding: 5px;
 }
-.toasts{
+.toasts {
   margin-left: 65%;
 }
 
-@media screen and (max-width:992px) {
-  #quot,#author{
+@media screen and (max-width: 992px) {
+  #quot,
+  #author {
     font-size: 2rem !important;
   }
-  #quote{
+  #quote {
     top: 60%;
   }
 }
 
-@media screen and (max-width:768px) {
-  .pie_chart{
+@media screen and (max-width: 768px) {
+  .pie_chart {
     display: none;
   }
-  
-  .board-btn,.alg-btn,.frac-btn{
+
+  .board-btn,
+  .alg-btn,
+  .frac-btn {
     height: 50px;
   }
-  .toasts{
-    margin-left:4%
+  .toasts {
+    margin-left: 4%;
   }
-  #quot,#author{
+  #quot,
+  #author {
     font-size: 1.3rem !important;
   }
-  .flex-btn{
+  .flex-btn {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
   }
-  #date-div{
+  #date-div {
     width: 62%;
   }
-  #date{
+  #date {
     font-size: 2rem;
   }
-  #quote{
+  #quote {
     top: 72%;
   }
-} 
-@media screen and (max-width:350px) {
-  
 }
-
+@media screen and (max-width: 350px) {
+}
